ocaml-3.10.2-patched_x86_64/parsing/parser.output
   0  $accept : %entry% $end

   1  implementation : structure EOF

   2  interface : signature EOF

   3  toplevel_phrase : top_structure SEMISEMI
   4                  | seq_expr SEMISEMI
   5                  | toplevel_directive SEMISEMI
   6                  | EOF

   7  top_structure : structure_item
   8                | structure_item top_structure

   9  use_file : use_file_tail
  10           | seq_expr use_file_tail

  11  use_file_tail : EOF
  12                | SEMISEMI EOF
  13                | SEMISEMI seq_expr use_file_tail
  14                | SEMISEMI structure_item use_file_tail
  15                | SEMISEMI toplevel_directive use_file_tail
  16                | structure_item use_file_tail
  17                | toplevel_directive use_file_tail

  18  module_expr : mod_longident
  19              | STRUCT structure END
  20              | STRUCT structure error
  21              | FUNCTOR LPAREN UIDENT COLON module_type RPAREN MINUSGREATER module_expr
  22              | module_expr LPAREN module_expr RPAREN
  23              | module_expr LPAREN module_expr error
  24              | LPAREN module_expr COLON module_type RPAREN
  25              | LPAREN module_expr COLON module_type error
  26              | LPAREN module_expr RPAREN
  27              | LPAREN module_expr error

  28  structure : structure_tail
  29            | seq_expr structure_tail

  30  structure_tail :
  31                 | SEMISEMI
  32                 | SEMISEMI seq_expr structure_tail
  33                 | SEMISEMI structure_item structure_tail
  34                 | structure_item structure_tail

  35  structure_item : LET rec_flag let_bindings
  36                 | EXTERNAL val_ident COLON core_type EQUAL primitive_declaration
  37                 | TYPE type_declarations
  38                 | EXCEPTION UIDENT constructor_arguments
  39                 | EXCEPTION UIDENT EQUAL constr_longident
  40                 | MODULE UIDENT module_binding
  41                 | MODULE REC module_rec_bindings
  42                 | MODULE TYPE ident EQUAL module_type
  43                 | OPEN mod_longident
  44                 | CLASS class_declarations
  45                 | CLASS TYPE class_type_declarations
  46                 | INCLUDE module_expr

  47  module_binding : EQUAL module_expr
  48                 | COLON module_type EQUAL module_expr
  49                 | LPAREN UIDENT COLON module_type RPAREN module_binding

  50  module_rec_bindings : module_rec_binding
  51                      | module_rec_bindings AND module_rec_binding

  52  module_rec_binding : UIDENT COLON module_type EQUAL module_expr

  53  module_type : mty_longident
  54              | SIG signature END
  55              | SIG signature error
  56              | FUNCTOR LPAREN UIDENT COLON module_type RPAREN MINUSGREATER module_type
  57              | module_type WITH with_constraints
  58              | LPAREN module_type RPAREN
  59              | LPAREN module_type error

  60  signature :
  61            | signature signature_item
  62            | signature signature_item SEMISEMI

  63  signature_item : VAL val_ident COLON core_type
  64                 | EXTERNAL val_ident COLON core_type EQUAL primitive_declaration
  65                 | TYPE type_declarations
  66                 | EXCEPTION UIDENT constructor_arguments
  67                 | MODULE UIDENT module_declaration
  68                 | MODULE REC module_rec_declarations
  69                 | MODULE TYPE ident
  70                 | MODULE TYPE ident EQUAL module_type
  71                 | OPEN mod_longident
  72                 | INCLUDE module_type
  73                 | CLASS class_descriptions
  74                 | CLASS TYPE class_type_declarations

  75  module_declaration : COLON module_type
  76                     | LPAREN UIDENT COLON module_type RPAREN module_declaration

  77  module_rec_declarations : module_rec_declaration
  78                          | module_rec_declarations AND module_rec_declaration

  79  module_rec_declaration : UIDENT COLON module_type

  80  class_declarations : class_declarations AND class_declaration
  81                     | class_declaration

  82  class_declaration : virtual_flag class_type_parameters LIDENT class_fun_binding

  83  class_fun_binding : EQUAL class_expr
  84                    | COLON class_type EQUAL class_expr
  85                    | labeled_simple_pattern class_fun_binding

  86  class_type_parameters :
  87                        | LBRACKET type_parameter_list RBRACKET

  88  class_fun_def : labeled_simple_pattern MINUSGREATER class_expr
  89                | labeled_simple_pattern class_fun_def

  90  class_expr : class_simple_expr
  91             | FUN class_fun_def
  92             | class_simple_expr simple_labeled_expr_list
  93             | LET rec_flag let_bindings IN class_expr

  94  class_simple_expr : LBRACKET core_type_comma_list RBRACKET class_longident
  95                    | class_longident
  96                    | OBJECT class_structure END
  97                    | OBJECT class_structure error
  98                    | LPAREN class_expr COLON class_type RPAREN
  99                    | LPAREN class_expr COLON class_type error
 100                    | LPAREN class_expr RPAREN
 101                    | LPAREN class_expr error

 102  class_structure : class_self_pattern class_fields

 103  class_self_pattern : LPAREN pattern RPAREN
 104                     | LPAREN pattern COLON core_type RPAREN
 105                     |

 106  class_fields :
 107               | class_fields INHERIT class_expr parent_binder
 108               | class_fields VAL virtual_value
 109               | class_fields VAL value
 110               | class_fields virtual_method
 111               | class_fields concrete_method
 112               | class_fields CONSTRAINT constrain
 113               | class_fields INITIALIZER seq_expr

 114  parent_binder : AS LIDENT
 115                |

 116  virtual_value : MUTABLE VIRTUAL label COLON core_type
 117                | VIRTUAL mutable_flag label COLON core_type

 118  value : mutable_flag label EQUAL seq_expr
 119        | mutable_flag label type_constraint EQUAL seq_expr

 120  virtual_method : METHOD PRIVATE VIRTUAL label COLON poly_type
 121                 | METHOD VIRTUAL private_flag label COLON poly_type

 122  concrete_method : METHOD private_flag label strict_binding
 123                  | METHOD private_flag label COLON poly_type EQUAL seq_expr

 124  class_type : class_signature
 125             | QUESTION LIDENT COLON simple_core_type_or_tuple MINUSGREATER class_type
 126             | OPTLABEL simple_core_type_or_tuple MINUSGREATER class_type
 127             | LIDENT COLON simple_core_type_or_tuple MINUSGREATER class_type
 128             | simple_core_type_or_tuple MINUSGREATER class_type

 129  class_signature : LBRACKET core_type_comma_list RBRACKET clty_longident
 130                  | clty_longident
 131                  | OBJECT class_sig_body END
 132                  | OBJECT class_sig_body error

 133  class_sig_body : class_self_type class_sig_fields

 134  class_self_type : LPAREN core_type RPAREN
 135                  |

 136  class_sig_fields :
 137                   | class_sig_fields INHERIT class_signature
 138                   | class_sig_fields VAL value_type
 139                   | class_sig_fields virtual_method
 140                   | class_sig_fields method_type
 141                   | class_sig_fields CONSTRAINT constrain

 142  value_type : VIRTUAL mutable_flag label COLON core_type
 143             | MUTABLE virtual_flag label COLON core_type
 144             | label COLON core_type

 145  method_type : METHOD private_flag label COLON poly_type

 146  constrain : core_type EQUAL core_type

 147  class_descriptions : class_descriptions AND class_description
 148                     | class_description

 149  class_description : virtual_flag class_type_parameters LIDENT COLON class_type

 150  class_type_declarations : class_type_declarations AND class_type_declaration
 151                          | class_type_declaration

 152  class_type_declaration : virtual_flag class_type_parameters LIDENT EQUAL class_signature

 153  seq_expr : expr
 154           | expr SEMI
 155           | expr SEMI seq_expr

 156  labeled_simple_pattern : QUESTION LPAREN label_let_pattern opt_default RPAREN
 157                         | QUESTION label_var
 158                         | OPTLABEL LPAREN let_pattern opt_default RPAREN
 159                         | OPTLABEL pattern_var
 160                         | TILDE LPAREN label_let_pattern RPAREN
 161                         | TILDE label_var
 162                         | LABEL simple_pattern
 163                         | simple_pattern

 164  pattern_var : LIDENT
 165              | UNDERSCORE

 166  opt_default :
 167              | EQUAL seq_expr

 168  label_let_pattern : label_var
 169                    | label_var COLON core_type

 170  label_var : LIDENT

 171  let_pattern : pattern
 172              | pattern COLON core_type

 173  expr : simple_expr
 174       | simple_expr simple_labeled_expr_list
 175       | LET rec_flag let_bindings IN seq_expr
 176       | LET MODULE UIDENT module_binding IN seq_expr
 177       | FUNCTION opt_bar match_cases
 178       | FUN labeled_simple_pattern fun_def
 179       | MATCH seq_expr WITH opt_bar match_cases
 180       | TRY seq_expr WITH opt_bar match_cases
 181       | TRY seq_expr WITH error
 182       | expr_comma_list
 183       | constr_longident simple_expr
 184       | name_tag simple_expr
 185       | IF seq_expr THEN expr ELSE expr
 186       | IF seq_expr THEN expr
 187       | WHILE seq_expr DO seq_expr DONE
 188       | FOR val_ident EQUAL seq_expr direction_flag seq_expr DO seq_expr DONE
 189       | expr COLONCOLON expr
 190       | LPAREN COLONCOLON RPAREN LPAREN expr COMMA expr RPAREN
 191       | expr INFIXOP0 expr
 192       | expr INFIXOP1 expr
 193       | expr INFIXOP2 expr
 194       | expr INFIXOP3 expr
 195       | expr INFIXOP4 expr
 196       | expr PLUS expr
 197       | expr MINUS expr
 198       | expr MINUSDOT expr
 199       | expr STAR expr
 200       | expr EQUAL expr
 201       | expr LESS expr
 202       | expr GREATER expr
 203       | expr OR expr
 204       | expr BARBAR expr
 205       | expr AMPERSAND expr
 206       | expr AMPERAMPER expr
 207       | expr COLONEQUAL expr
 208       | subtractive expr
 209       | simple_expr DOT label_longident LESSMINUS expr
 210       | simple_expr DOT LPAREN seq_expr RPAREN LESSMINUS expr
 211       | simple_expr DOT LBRACKET seq_expr RBRACKET LESSMINUS expr
 212       | simple_expr DOT LBRACE expr RBRACE LESSMINUS expr
 213       | label LESSMINUS expr
 214       | ASSERT simple_expr
 215       | LAZY simple_expr
 216       | OBJECT class_structure END
 217       | OBJECT class_structure error

 218  simple_expr : val_longident
 219              | constant
 220              | constr_longident
 221              | name_tag
 222              | LPAREN seq_expr RPAREN
 223              | LPAREN seq_expr error
 224              | BEGIN seq_expr END
 225              | BEGIN END
 226              | BEGIN seq_expr error
 227              | LPAREN seq_expr type_constraint RPAREN
 228              | simple_expr DOT label_longident
 229              | simple_expr DOT LPAREN seq_expr RPAREN
 230              | simple_expr DOT LPAREN seq_expr error
 231              | simple_expr DOT LBRACKET seq_expr RBRACKET
 232              | simple_expr DOT LBRACKET seq_expr error
 233              | simple_expr DOT LBRACE expr RBRACE
 234              | simple_expr DOT LBRACE expr_comma_list error
 235              | LBRACE record_expr RBRACE
 236              | LBRACE record_expr error
 237              | LBRACKETBAR expr_semi_list opt_semi BARRBRACKET
 238              | LBRACKETBAR expr_semi_list opt_semi error
 239              | LBRACKETBAR BARRBRACKET
 240              | LBRACKET expr_semi_list opt_semi RBRACKET
 241              | LBRACKET expr_semi_list opt_semi error
 242              | PREFIXOP simple_expr
 243              | NEW class_longident
 244              | LBRACELESS field_expr_list opt_semi GREATERRBRACE
 245              | LBRACELESS field_expr_list opt_semi error
 246              | LBRACELESS GREATERRBRACE
 247              | simple_expr SHARP label

 248  simple_labeled_expr_list : labeled_simple_expr
 249                           | simple_labeled_expr_list labeled_simple_expr

 250  labeled_simple_expr : simple_expr
 251                      | label_expr

 252  label_expr : LABEL simple_expr
 253             | TILDE label_ident
 254             | QUESTION label_ident
 255             | OPTLABEL simple_expr

 256  label_ident : LIDENT

 257  let_bindings : let_binding
 258               | let_bindings AND let_binding

 259  let_binding : val_ident fun_binding
 260              | pattern EQUAL seq_expr

 261  fun_binding : strict_binding
 262              | type_constraint EQUAL seq_expr

 263  strict_binding : EQUAL seq_expr
 264                 | labeled_simple_pattern fun_binding

 265  match_cases : pattern match_action
 266              | match_cases BAR pattern match_action

 267  fun_def : match_action
 268          | labeled_simple_pattern fun_def

 269  match_action : MINUSGREATER seq_expr
 270               | WHEN seq_expr MINUSGREATER seq_expr

 271  expr_comma_list : expr_comma_list COMMA expr
 272                  | expr COMMA expr

 273  record_expr : simple_expr WITH lbl_expr_list opt_semi
 274              | lbl_expr_list opt_semi

 275  lbl_expr_list : label_longident EQUAL expr
 276                | lbl_expr_list SEMI label_longident EQUAL expr

 277  field_expr_list : label EQUAL expr
 278                  | field_expr_list SEMI label EQUAL expr

 279  expr_semi_list : expr
 280                 | expr_semi_list SEMI expr

 281  type_constraint : COLON core_type
 282                  | COLON core_type COLONGREATER core_type
 283                  | COLONGREATER core_type
 284                  | COLON error
 285                  | COLONGREATER error

 286  pattern : simple_pattern
 287          | pattern AS val_ident
 288          | pattern_comma_list
 289          | constr_longident pattern
 290          | name_tag pattern
 291          | pattern COLONCOLON pattern
 292          | LPAREN COLONCOLON RPAREN LPAREN pattern COMMA pattern RPAREN
 293          | pattern BAR pattern

 294  simple_pattern : val_ident
 295                 | UNDERSCORE
 296                 | signed_constant
 297                 | CHAR DOTDOT CHAR
 298                 | constr_longident
 299                 | name_tag
 300                 | SHARP type_longident
 301                 | LBRACE lbl_pattern_list opt_semi RBRACE
 302                 | LBRACE lbl_pattern_list opt_semi error
 303                 | LBRACKET pattern_semi_list opt_semi RBRACKET
 304                 | LBRACKET pattern_semi_list opt_semi error
 305                 | LBRACKETBAR pattern_semi_list opt_semi BARRBRACKET
 306                 | LBRACKETBAR BARRBRACKET
 307                 | LBRACKETBAR pattern_semi_list opt_semi error
 308                 | LPAREN pattern RPAREN
 309                 | LPAREN pattern error
 310                 | LPAREN pattern COLON core_type RPAREN
 311                 | LPAREN pattern COLON core_type error

 312  pattern_comma_list : pattern_comma_list COMMA pattern
 313                     | pattern COMMA pattern

 314  pattern_semi_list : pattern
 315                    | pattern_semi_list SEMI pattern

 316  lbl_pattern_list : label_longident EQUAL pattern
 317                   | lbl_pattern_list SEMI label_longident EQUAL pattern

 318  primitive_declaration : STRING
 319                        | STRING primitive_declaration

 320  type_declarations : type_declaration
 321                    | type_declarations AND type_declaration

 322  type_declaration : type_parameters LIDENT type_kind constraints

 323  constraints : constraints CONSTRAINT constrain
 324              |

 325  type_kind :
 326            | EQUAL core_type
 327            | EQUAL constructor_declarations
 328            | EQUAL PRIVATE constructor_declarations
 329            | EQUAL private_flag BAR constructor_declarations
 330            | EQUAL private_flag LBRACE label_declarations opt_semi RBRACE
 331            | EQUAL core_type EQUAL private_flag opt_bar constructor_declarations
 332            | EQUAL core_type EQUAL private_flag LBRACE label_declarations opt_semi RBRACE
 333            | EQUAL PRIVATE core_type

 334  type_parameters :
 335                  | type_parameter
 336                  | LPAREN type_parameter_list RPAREN

 337  type_parameter : type_variance QUOTE ident

 338  type_variance :
 339                | PLUS
 340                | MINUS

 341  type_parameter_list : type_parameter
 342                      | type_parameter_list COMMA type_parameter

 343  constructor_declarations : constructor_declaration
 344                           | constructor_declarations BAR constructor_declaration

 345  constructor_declaration : constr_ident constructor_arguments

 346  constructor_arguments :
 347                        | OF core_type_list

 348  label_declarations : label_declaration
 349                     | label_declarations SEMI label_declaration

 350  label_declaration : mutable_flag label COLON poly_type

 351  with_constraints : with_constraint
 352                   | with_constraints AND with_constraint

 353  with_constraint : TYPE type_parameters label_longident with_type_binder core_type constraints
 354                  | MODULE mod_longident EQUAL mod_ext_longident

 355  with_type_binder : EQUAL
 356                   | EQUAL PRIVATE

 357  typevar_list : QUOTE ident
 358               | typevar_list QUOTE ident

 359  poly_type : core_type
 360            | typevar_list DOT core_type

 361  core_type : core_type2
 362            | core_type2 AS QUOTE ident

 363  core_type2 : simple_core_type_or_tuple
 364             | QUESTION LIDENT COLON core_type2 MINUSGREATER core_type2
 365             | OPTLABEL core_type2 MINUSGREATER core_type2
 366             | LIDENT COLON core_type2 MINUSGREATER core_type2
 367             | core_type2 MINUSGREATER core_type2

 368  simple_core_type : simple_core_type2
 369                   | LPAREN core_type_comma_list RPAREN

 370  simple_core_type2 : QUOTE ident
 371                    | UNDERSCORE
 372                    | type_longident
 373                    | simple_core_type2 type_longident
 374                    | LPAREN core_type_comma_list RPAREN type_longident
 375                    | LESS meth_list GREATER
 376                    | LESS GREATER
 377                    | SHARP class_longident opt_present
 378                    | simple_core_type2 SHARP class_longident opt_present
 379                    | LPAREN core_type_comma_list RPAREN SHARP class_longident opt_present
 380                    | LBRACKET tag_field RBRACKET
 381                    | LBRACKET BAR row_field_list RBRACKET
 382                    | LBRACKET row_field BAR row_field_list RBRACKET
 383                    | LBRACKETGREATER opt_bar row_field_list RBRACKET
 384                    | LBRACKETGREATER RBRACKET
 385                    | LBRACKETLESS opt_bar row_field_list RBRACKET
 386                    | LBRACKETLESS opt_bar row_field_list GREATER name_tag_list RBRACKET

 387  row_field_list : row_field
 388                 | row_field_list BAR row_field

 389  row_field : tag_field
 390            | simple_core_type2

 391  tag_field : name_tag OF opt_ampersand amper_type_list
 392            | name_tag

 393  opt_ampersand : AMPERSAND
 394                |

 395  amper_type_list : core_type
 396                  | amper_type_list AMPERSAND core_type

 397  opt_present : LBRACKETGREATER name_tag_list RBRACKET
 398              |

 399  name_tag_list : name_tag
 400                | name_tag_list name_tag

 401  simple_core_type_or_tuple : simple_core_type
 402                            | simple_core_type STAR core_type_list

 403  core_type_comma_list : core_type
 404                       | core_type_comma_list COMMA core_type

 405  core_type_list : simple_core_type
 406                 | core_type_list STAR simple_core_type

 407  meth_list : field SEMI meth_list
 408            | field opt_semi
 409            | DOTDOT

 410  field : label COLON poly_type

 411  label : LIDENT

 412  constant : INT
 413           | CHAR
 414           | STRING
 415           | FLOAT
 416           | INT32
 417           | INT64
 418           | NATIVEINT

 419  signed_constant : constant
 420                  | MINUS INT
 421                  | MINUS FLOAT
 422                  | MINUS INT32
 423                  | MINUS INT64
 424                  | MINUS NATIVEINT

 425  ident : UIDENT
 426        | LIDENT

 427  val_ident : LIDENT
 428            | LPAREN operator RPAREN

 429  operator : PREFIXOP
 430           | INFIXOP0
 431           | INFIXOP1
 432           | INFIXOP2
 433           | INFIXOP3
 434           | INFIXOP4
 435           | PLUS
 436           | MINUS
 437           | MINUSDOT
 438           | STAR
 439           | EQUAL
 440           | LESS
 441           | GREATER
 442           | OR
 443           | BARBAR
 444           | AMPERSAND
 445           | AMPERAMPER
 446           | COLONEQUAL

 447  constr_ident : UIDENT
 448               | LPAREN RPAREN
 449               | COLONCOLON
 450               | FALSE
 451               | TRUE

 452  val_longident : val_ident
 453                | mod_longident DOT val_ident

 454  constr_longident : mod_longident
 455                   | LBRACKET RBRACKET
 456                   | LPAREN RPAREN
 457                   | FALSE
 458                   | TRUE

 459  label_longident : LIDENT
 460                  | mod_longident DOT LIDENT

 461  type_longident : LIDENT
 462                 | mod_ext_longident DOT LIDENT

 463  mod_longident : UIDENT
 464                | mod_longident DOT UIDENT

 465  mod_ext_longident : UIDENT
 466                    | mod_ext_longident DOT UIDENT
 467                    | mod_ext_longident LPAREN mod_ext_longident RPAREN

 468  mty_longident : ident
 469                | mod_ext_longident DOT ident

 470  clty_longident : LIDENT
 471                 | mod_ext_longident DOT LIDENT

 472  class_longident : LIDENT
 473                  | mod_longident DOT LIDENT

 474  toplevel_directive : SHARP ident
 475                     | SHARP ident STRING
 476                     | SHARP ident INT
 477                     | SHARP ident val_longident
 478                     | SHARP ident FALSE
 479                     | SHARP ident TRUE

 480  name_tag : BACKQUOTE ident

 481  rec_flag :
 482           | REC

 483  direction_flag : TO
 484                 | DOWNTO

 485  private_flag :
 486               | PRIVATE

 487  mutable_flag :
 488               | MUTABLE

 489  virtual_flag :
 490               | VIRTUAL

 491  opt_bar :
 492          | BAR

 493  opt_semi :
 494           | SEMI

 495  subtractive : MINUS
 496              | MINUSDOT

 497  %entry% : '\001' implementation
 498          | '\002' interface
 499          | '\003' toplevel_phrase
 500          | '\004' use_file

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	'\003'  shift 3
	'\004'  shift 4
	.  error

	%entry%  goto 5


state 1
	%entry% : '\001' . implementation  (497)
	structure_tail : .  (30)

	ASSERT  shift 6
	BACKQUOTE  shift 7
	BEGIN  shift 8
	CHAR  shift 9
	CLASS  shift 10
	EXCEPTION  shift 11
	EXTERNAL  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	FOR  shift 15
	FUN  shift 16
	FUNCTION  shift 17
	IF  shift 18
	INCLUDE  shift 19
	INT  shift 20
	INT32  shift 21
	INT64  shift 22
	LAZY  shift 23
	LBRACE  shift 24
	LBRACELESS  shift 25
	LBRACKET  shift 26
	LBRACKETBAR  shift 27
	LET  shift 28
	LIDENT  shift 29
	LPAREN  shift 30
	MATCH  shift 31
	MINUS  shift 32
	MINUSDOT  shift 33
	MODULE  shift 34
	NATIVEINT  shift 35
	NEW  shift 36
	OBJECT  shift 37
	OPEN  shift 38
	PREFIXOP  shift 39
	SEMISEMI  shift 40
	STRING  shift 41
	TRUE  shift 42
	TRY  shift 43
	TYPE  shift 44
	UIDENT  shift 45
	WHILE  shift 46
	EOF  reduce 30

	implementation  goto 47
	structure  goto 48
	seq_expr  goto 49
	structure_item  goto 50
	mod_longident  goto 51
	structure_tail  goto 52
	val_ident  goto 53
	constr_longident  goto 54
	label  goto 55
	expr  goto 56
	simple_expr  goto 57
	expr_comma_list  goto 58
	name_tag  goto 59
	subtractive  goto 60
	val_longident  goto 61
	constant  goto 62


state 2
	%entry% : '\002' . interface  (498)
	signature : .  (60)

	.  reduce 60

	interface  goto 63
	signature  goto 64


state 3
	%entry% : '\003' . toplevel_phrase  (499)

	ASSERT  shift 6
	BACKQUOTE  shift 7
	BEGIN  shift 8
	CHAR  shift 9
	CLASS  shift 10
	EOF  shift 65
	EXCEPTION  shift 11
	EXTERNAL  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	FOR  shift 15
	FUN  shift 16
	FUNCTION  shift 17
	IF  shift 18
	INCLUDE  shift 19
	INT  shift 20
	INT32  shift 21
	INT64  shift 22
	LAZY  shift 23
	LBRACE  shift 24
	LBRACELESS  shift 25
	LBRACKET  shift 26
	LBRACKETBAR  shift 27
	LET  shift 28
	LIDENT  shift 29
	LPAREN  shift 30
	MATCH  shift 31
	MINUS  shift 32
	MINUSDOT  shift 33
	MODULE  shift 34
	NATIVEINT  shift 35
	NEW  shift 36
	OBJECT  shift 37
	OPEN  shift 38
	PREFIXOP  shift 39
	SHARP  shift 66
	STRING  shift 41
	TRUE  shift 42
	TRY  shift 43
	TYPE  shift 44
	UIDENT  shift 45
	WHILE  shift 46
	.  error

	toplevel_phrase  goto 67
	top_structure  goto 68
	seq_expr  goto 69
	toplevel_directive  goto 70
	structure_item  goto 71
	mod_longident  goto 51
	val_ident  goto 53
	constr_longident  goto 54
	label  goto 55
	expr  goto 56
	simple_expr  goto 57
	expr_comma_list  goto 58
	name_tag  goto 59
	subtractive  goto 60
	val_longident  goto 61
	constant  goto 62


state 4
	%entry% : '\004' . use_file  (500)

	ASSERT  shift 6
	BACKQUOTE  shift 7
	BEGIN  shift 8
	CHAR  shift 9
	CLASS  shift 10
	EOF  shift 72
	EXCEPTION  shift 11
	EXTERNAL  shift 12
	FALSE  shift 13
	FLOAT  shift 14
	FOR  shift 15
	FUN  shift 16
	FUNCTION  shift 17
	IF  shift 18
	INCLUDE  shift 19
	INT  shift 20
	INT32  shift 21
	INT64  shift 22
	LAZY  shift 23
	LBRACE  shift 24
	LBRACELESS  shift 25
	LBRACKET  shift 26
	LBRACKETBAR  shift 27
	LET  shift 28
	LIDENT  shift 29
	LPAREN  shift 30
	MATCH  shift 31
	MINUS  shift 32
	MINUSDOT  shift 33
	MODULE  shift 34
	NATIVEINT  shift 35
	NEW  shift 36
	OBJECT  shift 37
	OPEN  shift 38
	PREFIXOP  shift 39
	SEMISEMI  shift 73
	SHARP  shift 66
	STRING  shift 41
	TRUE  shift 42
	TRY  shift 43
	TYPE  shift 44
	UIDENT  shift 45
	WHILE  shift 46
	.  error

	use_file  goto 74
	seq_expr  goto 75
	toplevel_directive  goto 76
	structure_item  goto 77
	use_file_tail  goto 78
	mod_longident  goto 51
	val_ident  goto 53
	constr_longident  goto 54
	label  goto 55
	expr  goto 56
	simple_expr  goto 57
	expr_comma_list  goto 58
	name_tag  goto 59
	subtractive  goto 60
	val_longident  goto 61
	constant  goto 62


state 5
	$accept : %entry% . $end  (0)

	$end  accept


state 6
	expr : ASSERT . simple_expr  (214)

	BACKQUOTE  shift 7
	BEGIN  shift 8
	CHAR  shift 9
	FALSE  shift 13
	FLOAT  shift 14
	INT  shift 20
	INT32  shift 21
	INT64  shift 22
	LBRACE  shift 24
	LBRACELESS  shift 25
	LBRACKET  shift 26
	LBRACKETBAR  shift 27
	LIDENT  shift 79
	LPAREN  shift 80
	NATIVEINT  shift 35
	NEW  shift 36
	PREFIXOP  shift 39
	STRING  shift 41
	TRUE  shift 42
	UIDENT  shift 45
	.  error

	mod_longident  goto 51
	val_ident  goto 53
	constr_longident  goto 81
	simple_expr  goto 82
	name_tag  goto 83
	val_longident  goto 61
	constant  goto 62


state 7
	name_tag : BACKQUOTE . ident  (480)

	LIDENT  shift 84
	UIDENT  shift 85
	.  error

	ident  goto 86


state 8
	simple_expr : BEGIN . seq_expr END  (224)
	simple_expr : BEGIN . END  (225)
	simple_expr : BEGIN . seq_expr error  (226)

	ASSERT  shift 6
	BACKQUOTE  shift 7
	BEGIN  shift 8
	CHAR  shift 9
	END  shift 87
	FALSE  shift 13
	FLOAT  shift 14
	FOR  shift 15
	FUN  shift 16
	FUNCTION  shift 17
	IF  shift 18
	INT  shift 20
	INT32  shift 21
	INT64  shift 22
	LAZY  shift 23
	LBRACE  shift 24
	LBRACELESS  shift 25
	LBRACKET  shift 26
	LBRACKETBAR  shift 27
	LET  shift 88
	LIDENT  shift 29
	LPAREN  shift 30
	MATCH  shift 31
	MINUS  shift 32
	MINUSDOT  shift 33
	NATIVEINT  shift 35
	NEW  shift 36
	OBJECT  shift 37
	PREFIXOP  shift 39
	STRING  shift 41
	TRUE  shift 42
	TRY  shift 43
	UIDENT  shift 45
	WHILE  shift 46
	.  error

	seq_expr  goto 89
	mod_longident  goto 51
	val_ident  goto 53
	constr_longident  goto 54
	label  goto 55
	expr  goto 56
	simple_expr  goto 57
	expr_comma_list  goto 58
	name_tag  goto 59
	subtractive  goto 60
	val_longident  goto 61
	constant  goto 62


state 9
	constant : CHAR .  (413)

	.  reduce 413


state 10
	structure_item : CLASS . class_declarations  (44)
	structure_item : CLASS . TYPE class_type_declarations  (45)
	virtual_flag : .  (489)

	TYPE  shift 90
	VIRTUAL  shift 91
	LBRACKET  reduce 489
	LIDENT  reduce 489

	class_declarations  goto 92
	class_declaration  goto 93
	virtual_flag  goto 94


state 11
	structure_item : EXCEPTION . UIDENT constructor_arguments  (38)
	structure_item : EXCEPTION . UIDENT EQUAL constr_longident  (39)

	UIDENT  shift 95
	.  error


state 12
	structure_item : EXTERNAL . val_ident COLON core_type EQUAL primitive_declaration  (36)

	LIDENT  shift 79
	LPAREN  shift 96
	.  error

	val_ident  goto 97


state 13
	constr_longident : FALSE .  (457)

	.  reduce 457


state 14
	constant : FLOAT .  (415)

	.  reduce 415

